add tags to domain
